# rp2040-i2s-dsp

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.md  feature.yaml  spike.yaml
.github/workflows/: ci.yaml
adr/: 001-toolchain-runtime.md  README.md
cmake/: compiler_warnings.cmake  rp2040_gcc_toolchain.cmake
docs/: architecture.md  hardware-notes.md  roadmap.md
firmware/: CMakeLists.txt
firmware/bootloader/: CMakeLists.txt
firmware/demo/: CMakeLists.txt
firmware/libs/platform/: CMakeLists.txt
firmware/libs/platform/src/: syscalls.c
scripts/: build.sh  ci.sh  format.sh
